--- a/angular.json
+++ b/angular.json
@@ -91,10 +91,11 @@
                 "input": "public"
               }
             ],
-            "styles": [
-              "@angular/material/prebuilt-themes/azure-blue.css",
-              "src/styles.scss"
-            ],
+    "styles": [
+                "node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+  "src/styles.scss"
+]
+,
             "scripts": []
           }
         }
